# shellmate-multissh-device

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  PRD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
.opencode/: PHASE1_PROMPT.md  config.json
docs/: 00-project-structure.md  01-development-plan.md  02-project-scope.md  03-frontend-plan.md  04-backend-plan.md  05-erd-plan.md  06-architecture-plan.md  07-security-plan.md  08-devops-plan.md  README.md  architecture.md  codebase_review_report.md  vip_administrator_access_guide.md
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/audit/: mod.rs  redaction.rs
src-tauri/src/biometric/: mod.rs  windows.rs
src-tauri/src/commands/: audit.rs  biometric.rs  broadcast.rs  credential.rs  diagnostics.rs  discovery.rs  export.rs  git.rs  group.rs  history.rs  host.rs  host_transfer.rs  known_hosts.rs  local_shell.rs  mod.rs  p2p_sync.rs  plugin.rs  port_forward.rs  recording.rs  server_stats.rs  settings.rs  sftp.rs  snippet.rs  ssh.rs  ssh_config.rs  ssh_key.rs  sync.rs  system.rs  team.rs  theme.rs  vault.rs  vip_access.rs
src-tauri/src/crypto/: aes.rs  kdf.rs  mod.rs  secure_buffer.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/known_hosts/: manager.rs  mod.rs
src-tauri/src/plugin/: manifest.rs  mod.rs  permissions.rs  runtime.rs
src-tauri/src/port_forward/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: broadcast.rs  handler.rs  mod.rs  reconnect.rs  session.rs
src-tauri/src/sync/: conflict.rs  encrypt.rs  manifest.rs  mod.rs
src-tauri/src/sync/backend/: http.rs  mod.rs  s3.rs  webdav.rs
src-tauri/src/team/: mod.rs
src-tauri/src/vault/: mod.rs
src/components/connect/: QuickConnect.tsx
src/components/history/: CommandHistoryPanel.tsx
src/components/hosts/: DiscoveredHostList.tsx  GroupForm.tsx  HostForm.tsx  HostItem.tsx  HostList.tsx
src/components/import/: ImportPanel.tsx
src/components/layout/: AppLayout.tsx  BottomNav.tsx  ContentArea.tsx  DragGhost.tsx  MobileLayout.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/components/port-forward/: PortForwardPanel.tsx
src/components/security/: HostKeyVerificationDialog.tsx
src/components/server/: DockerPanel.tsx  ServerStatsPanel.tsx
src/components/settings/: GeneralSettingsTab.tsx  SettingsDialog.tsx  TerminalSettingsTab.tsx  ThemeSettingsTab.tsx  VaultSettingsTab.tsx
src/components/sftp/: SftpBrowser.tsx
src/components/snippets/: SnippetForm.tsx  SnippetPanel.tsx
src/components/sync/: DevProxyTab.tsx  FileExplorerTab.tsx  P2pSyncPanel.tsx  RemoteDesktopTab.tsx
src/components/terminal/: BroadcastModePanel.tsx  MobileKeyBar.tsx  Terminal.tsx
src/components/ui/: Button.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Form.tsx  Modal.tsx  Toast.tsx
src/components/updates/: UpdateToast.tsx
src/components/vault/: MobileOnboard.tsx  VaultGate.tsx  VaultSetup.tsx  VaultUnlock.tsx
src/components/vip/: VipAccessPanel.tsx
src/hooks/: useAutoLock.ts  useAutoUpdater.ts  useCommands.ts  useCustomDragDrop.ts  useIsMobile.ts  useKeyboardShortcuts.ts
src/i18n/: en.ts
src/lib/: snippet-expand.ts  tauri.ts
src/stores/: broadcast-store.ts  command-store.ts  discovery-store.ts  drag-store.ts  history-store.ts  host-store.ts  pane-store.ts  port-forward-store.ts  settings-store.ts  sftp-store.ts  shortcuts-store.ts  snippet-store.ts  ssh-store.ts  stats-store.ts  tab-store.ts  toast-store.ts  ui-store.ts  vault-store.ts
src/styles/: globals.css
src/themes/: builtin.ts
src/types/: advanced.ts  audit.ts  broadcast.ts  host.ts  index.ts  known-hosts.ts  plugin.ts  port-forward.ts  server-stats.ts  sftp.ts  snippet.ts  ssh.ts  sync.ts  tab.ts  team.ts  theme.ts
