name = "shellmate-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "limit"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
