[package]
name = "shellmate"
version = "0.1.0"
description = "Self-hosted, local-first SSH client desktop app"
authors = ["Matt"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "shellmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"

# Crypto & vault
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
subtle = "2.6"
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# SSH & async runtime
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time", "net"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
mdns-sd = "0.20.0"
hostname = "0.4.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
dirs = "5"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
dashmap = "6"
which = "7"

# Plugin system (Wasmtime WASM runtime)
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"

# Biometric / Windows Hello (Windows-only)
[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Security_Credentials",
    "Security_Credentials_UI",
    "Foundation",
    "Foundation_Collections",
]

[target.'cfg(windows)'.dependencies]
pollster = "0.4"
windows-future = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
